@@ -14,18 +14,14 @@ import no.nav.foreldrepenger.behandling.RelatertBehandlingTjeneste;
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandling;
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandlingsresultat;
 import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingsresultatRepository;
-import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelseFordelingAggregat;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelsesFordelingRepository;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakRepository;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatEntitet;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeAktivitetEntitet;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeEntitet;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPeriodeSøknadEntitet;
-import no.nav.foreldrepenger.behandlingslager.uttak.UttakResultatPerioderEntitet;
 import no.nav.foreldrepenger.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
 import no.nav.foreldrepenger.domene.iay.modell.ArbeidsforholdOverstyring;
 import no.nav.foreldrepenger.domene.iay.modell.InntektArbeidYtelseGrunnlag;
-import no.nav.foreldrepenger.domene.typer.InternArbeidsforholdRef;
+import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttak;
+import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriode;
+import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriodeAktivitet;
+import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakTjeneste;
 import no.nav.foreldrepenger.domene.uttak.UttakOmsorgUtil;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResultatPeriodeAktivitetDto;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResultatPeriodeDto;
@@ -33,7 +29,7 @@ import no.nav.foreldrepenger.web.app.tjenester.behandling.uttak.dto.UttakResulta
 
 @ApplicationScoped
 public class UttakPerioderDtoTjeneste {
-    private UttakRepository uttakRepository;
+    private ForeldrepengerUttakTjeneste uttakTjeneste;
     private RelatertBehandlingTjeneste relatertBehandlingTjeneste;
     private YtelsesFordelingRepository ytelsesFordelingRepository;
     private ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste;
@@ -45,13 +41,13 @@ public class UttakPerioderDtoTjeneste {
     }
 
     @Inject
-    public UttakPerioderDtoTjeneste(UttakRepository uttakRepository,
-                                        RelatertBehandlingTjeneste relatertBehandlingTjeneste,
-                                        YtelsesFordelingRepository ytelsesFordelingRepository,
-                                        ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste,
-                                        BehandlingsresultatRepository behandlingsresultatRepository,
-                                        InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste) {
-        this.uttakRepository = uttakRepository;
+    public UttakPerioderDtoTjeneste(ForeldrepengerUttakTjeneste uttakTjeneste,
+                                    RelatertBehandlingTjeneste relatertBehandlingTjeneste,
+                                    YtelsesFordelingRepository ytelsesFordelingRepository,
+                                    ArbeidsgiverDtoTjeneste arbeidsgiverDtoTjeneste,
+                                    BehandlingsresultatRepository behandlingsresultatRepository,
+                                    InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste) {
+        this.uttakTjeneste = uttakTjeneste;
         this.relatertBehandlingTjeneste = relatertBehandlingTjeneste;
         this.ytelsesFordelingRepository = ytelsesFordelingRepository;
         this.arbeidsgiverDtoTjeneste = arbeidsgiverDtoTjeneste;
@@ -60,47 +56,54 @@ public class UttakPerioderDtoTjeneste {
     }
 
     public Optional<UttakResultatPerioderDto> mapFra(Behandling behandling) {
-        Optional<YtelseFordelingAggregat> ytelseFordeling = ytelsesFordelingRepository.hentAggregatHvisEksisterer(behandling.getId());
-        Optional<UttakResultatEntitet> uttaksresultatAnnenPart = annenPartUttak(behandling);
-        UttakResultatPerioderDto perioder = new UttakResultatPerioderDto(finnUttakResultatPerioderSøker(behandling.getId()),
-            uttaksresultatAnnenPart.map(this::finnUttakResultatPerioderAnnenpart).orElse(Collections.emptyList()),
-            ytelseFordeling.map(yf -> UttakOmsorgUtil.harAnnenForelderRett(yf, uttaksresultatAnnenPart)).orElse(false),
+        var ytelseFordeling = ytelsesFordelingRepository.hentAggregatHvisEksisterer(behandling.getId());
+
+        final List<UttakResultatPeriodeDto> annenpartUttaksperioder;
+        final Optional<ForeldrepengerUttak> annenpartUttak;
+        var annenpartBehandling = annenpartBehandling(behandling);
+        if (annenpartBehandling.isPresent()) {
+            annenpartUttak = uttakTjeneste.hentUttakHvisEksisterer(annenpartBehandling.get().getId());
+            if (annenpartUttak.isPresent()) {
+                annenpartUttaksperioder = annenpartUttak.map(u -> {
+                    var annenpartBehandlingId = annenpartBehandling.orElseThrow().getId();
+                    return finnUttakResultatPerioder(u, annenpartBehandlingId);
+                }).orElse(List.of());
+            } else {
+                annenpartUttaksperioder = List.of();
+            }
+        } else {
+            annenpartUttaksperioder = List.of();
+            annenpartUttak = Optional.empty();
+        }
+
+        var perioderSøker = finnUttakResultatPerioderSøker(behandling.getId());
+        var perioder = new UttakResultatPerioderDto(perioderSøker,
+            annenpartUttaksperioder,
+            ytelseFordeling.map(yf -> UttakOmsorgUtil.harAnnenForelderRett(yf, annenpartUttak)).orElse(false),
             ytelseFordeling.map(UttakOmsorgUtil::harAleneomsorg).orElse(false));
         return Optional.of(perioder);
     }
 
-    private Optional<UttakResultatEntitet> annenPartUttak(Behandling behandling) {
-        Optional<Behandlingsresultat> behandlingsresultat = behandlingsresultatRepository.hentHvisEksisterer(behandling.getId());
+    private Optional<Behandling> annenpartBehandling(Behandling søkersBehandling) {
+        Optional<Behandlingsresultat> behandlingsresultat = behandlingsresultatRepository.hentHvisEksisterer(søkersBehandling.getId());
         if (behandlingsresultat.isPresent()) {
             if (behandlingsresultat.get().getBehandlingVedtak() != null) {
-                return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeUttaksplanPåVedtakstidspunkt(behandling);
+                return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeBehandlingPåVedtakstidspunkt(søkersBehandling);
             }
         }
-        return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeVedtattUttaksplan(behandling.getFagsak().getSaksnummer());
+        return relatertBehandlingTjeneste.hentAnnenPartsGjeldendeVedtattBehandling(søkersBehandling.getFagsak().getSaksnummer());
     }
 
     private List<UttakResultatPeriodeDto> finnUttakResultatPerioderSøker(Long behandling) {
-        Optional<UttakResultatEntitet> uttakResultat = uttakRepository.hentUttakResultatHvisEksisterer(behandling);
-
-        if (uttakResultat.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        return finnUttakResultatPerioder(uttakResultat.get());
+        return uttakTjeneste.hentUttakHvisEksisterer(behandling).map(uttak -> finnUttakResultatPerioder(uttak, behandling)).orElse(List.of());
     }
 
-    private List<UttakResultatPeriodeDto> finnUttakResultatPerioderAnnenpart(UttakResultatEntitet uttaksresultatAnnenPart) {
-        return finnUttakResultatPerioder(uttaksresultatAnnenPart);
-    }
+    private List<UttakResultatPeriodeDto> finnUttakResultatPerioder(ForeldrepengerUttak uttakResultat, Long behandling) {
+        var gjeldenePerioder = uttakResultat.getGjeldendePerioder();
 
-    private List<UttakResultatPeriodeDto> finnUttakResultatPerioder(UttakResultatEntitet uttakResultat) {
-        UttakResultatPerioderEntitet gjeldenePerioder = uttakResultat.getGjeldendePerioder();
-
+        var iayGrunnlag = inntektArbeidYtelseTjeneste.finnGrunnlag(behandling);
         List<UttakResultatPeriodeDto> list = new ArrayList<>();
-
-        var behandlingId = uttakResultat.getBehandlingsresultat().getBehandlingId();
-        var iayGrunnlag = inntektArbeidYtelseTjeneste.finnGrunnlag(behandlingId);
-        for (UttakResultatPeriodeEntitet entitet : gjeldenePerioder.getPerioder()) {
+        for (var entitet : gjeldenePerioder) {
             UttakResultatPeriodeDto periode = map(entitet, iayGrunnlag);
             list.add(periode);
         }
@@ -108,30 +111,27 @@ public class UttakPerioderDtoTjeneste {
         return sortedByFom(list);
     }
 
-    private UttakResultatPeriodeDto map(UttakResultatPeriodeEntitet entitet, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
-        UttakResultatPeriodeDto.Builder builder = new UttakResultatPeriodeDto.Builder()
-            .medTidsperiode(entitet.getFom(), entitet.getTom())
-            .medManuellBehandlingÅrsak(entitet.getManuellBehandlingÅrsak())
-            .medUtsettelseType(entitet.getUtsettelseType())
-            .medPeriodeResultatType(entitet.getPeriodeResultatType())
-            .medBegrunnelse(entitet.getBegrunnelse())
-            .medPeriodeResultatÅrsak(entitet.getPeriodeResultatÅrsak())
-            .medFlerbarnsdager(entitet.isFlerbarnsdager())
-            .medSamtidigUttak(entitet.isSamtidigUttak())
-            .medSamtidigUttaksprosent(entitet.getSamtidigUttaksprosent())
-            .medGraderingInnvilget(entitet.isGraderingInnvilget())
-            .medGraderingAvslåttÅrsak(entitet.getGraderingAvslagÅrsak())
-            .medOppholdÅrsak(entitet.getOppholdÅrsak());
-        if (entitet.getPeriodeSøknad().isPresent()) {
-            UttakResultatPeriodeSøknadEntitet periodeSøknad = entitet.getPeriodeSøknad().get();
-            builder.medPeriodeType(periodeSøknad.getUttakPeriodeType());
-        }
-        UttakResultatPeriodeDto periode = builder.build();
+    private UttakResultatPeriodeDto map(ForeldrepengerUttakPeriode periode, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
+        var dto = new UttakResultatPeriodeDto.Builder()
+            .medTidsperiode(periode.getFom(), periode.getTom())
+            .medManuellBehandlingÅrsak(periode.getManuellBehandlingÅrsak())
+            .medUtsettelseType(periode.getUtsettelseType())
+            .medPeriodeResultatType(periode.getResultatType())
+            .medBegrunnelse(periode.getBegrunnelse())
+            .medPeriodeResultatÅrsak(periode.getResultatÅrsak())
+            .medFlerbarnsdager(periode.isFlerbarnsdager())
+            .medSamtidigUttak(periode.isSamtidigUttak())
+            .medSamtidigUttaksprosent(periode.getSamtidigUttaksprosent())
+            .medGraderingInnvilget(periode.isGraderingInnvilget())
+            .medGraderingAvslåttÅrsak(periode.getGraderingAvslagÅrsak())
+            .medOppholdÅrsak(periode.getOppholdÅrsak())
+            .medPeriodeType(periode.getSøktKonto())
+            .build();
 
-        for (UttakResultatPeriodeAktivitetEntitet aktivitet : entitet.getAktiviteter()) {
-            periode.leggTilAktivitet(map(aktivitet, inntektArbeidYtelseGrunnlag));
+        for (var aktivitet : periode.getAktiviteter()) {
+            dto.leggTilAktivitet(map(aktivitet, inntektArbeidYtelseGrunnlag, periode.opprinneligSendtTilManuellBehandling()));
         }
-        return periode;
+        return dto;
     }
 
     private List<UttakResultatPeriodeDto> sortedByFom(List<UttakResultatPeriodeDto> list) {
@@ -141,28 +141,32 @@ public class UttakPerioderDtoTjeneste {
             .collect(Collectors.toList());
     }
 
-    private UttakResultatPeriodeAktivitetDto map(UttakResultatPeriodeAktivitetEntitet aktivitet, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
+    private UttakResultatPeriodeAktivitetDto map(ForeldrepengerUttakPeriodeAktivitet aktivitet,
+                                                 Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag,
+                                                 boolean opprinneligSendtTilManuellBehandling) {
         UttakResultatPeriodeAktivitetDto.Builder builder = new UttakResultatPeriodeAktivitetDto.Builder()
             .medProsentArbeid(aktivitet.getArbeidsprosent())
-            .medGradering(aktivitet.isSøktGradering())
+            .medGradering(aktivitet.isSøktGraderingForAktivitetIPeriode())
             .medTrekkdager(aktivitet.getTrekkdager())
             .medStønadskontoType(aktivitet.getTrekkonto())
             .medUttakArbeidType(aktivitet.getUttakArbeidType());
         mapArbeidsforhold(aktivitet, builder, inntektArbeidYtelseGrunnlag);
-        if (!aktivitet.getPeriode().opprinneligSendtTilManueltBehandling()) {
-            builder.medUtbetalingsgrad(aktivitet.getUtbetalingsprosent());
+        if (!opprinneligSendtTilManuellBehandling) {
+            builder.medUtbetalingsgrad(aktivitet.getUtbetalingsgrad());
         }
         return builder.build();
     }
 
-    private void mapArbeidsforhold(UttakResultatPeriodeAktivitetEntitet aktivitet, UttakResultatPeriodeAktivitetDto.Builder builder, Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
+    private void mapArbeidsforhold(ForeldrepengerUttakPeriodeAktivitet aktivitet,
+                                   UttakResultatPeriodeAktivitetDto.Builder builder,
+                                   Optional<InntektArbeidYtelseGrunnlag> inntektArbeidYtelseGrunnlag) {
         var arbeidsgiverOptional = aktivitet.getUttakAktivitet().getArbeidsgiver();
         List<ArbeidsforholdOverstyring> overstyringer = inntektArbeidYtelseGrunnlag.map(InntektArbeidYtelseGrunnlag::getArbeidsforholdOverstyringer).orElse(Collections.emptyList());
         var arbeidsgiverDto = arbeidsgiverOptional.map(arbgiver -> arbeidsgiverDtoTjeneste.mapFra(arbgiver, overstyringer)).orElse(null);
-        var internArbeidsforholdId = aktivitet.getArbeidsforholdId();
-        if (internArbeidsforholdId != null && inntektArbeidYtelseGrunnlag.isPresent() && inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().isPresent() && arbeidsgiverOptional.isPresent()) {
-            var eksternArbeidsforholdId = inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().get().finnEkstern(arbeidsgiverOptional.get(), InternArbeidsforholdRef.ref(internArbeidsforholdId));
-            builder.medArbeidsforhold(internArbeidsforholdId, eksternArbeidsforholdId.getReferanse(), arbeidsgiverDto);
+        var ref = aktivitet.getArbeidsforholdRef();
+        if (ref != null && inntektArbeidYtelseGrunnlag.isPresent() && inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().isPresent() && arbeidsgiverOptional.isPresent()) {
+            var eksternArbeidsforholdId = inntektArbeidYtelseGrunnlag.get().getArbeidsforholdInformasjon().get().finnEkstern(arbeidsgiverOptional.get(), ref);
+            builder.medArbeidsforhold(ref, eksternArbeidsforholdId.getReferanse(), arbeidsgiverDto);
         } else {
             builder.medArbeidsforhold(null, null, arbeidsgiverDto);
         }
